# QChallenge

./: .gitignore  README.md  pyproject.toml  test.db
api/: main.py
api/database/: db.py
api/models/: Customer.py  Message.py  User.py
