[build-system]
build-system = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "QChallenge"
version = "1.0.0"
description = "Coding Assignment for Q Company"
requires-python = ">=3.13,<4.0"
authors = [
    { name = "Ville Kaikkonen", email = "ville.kaikk@gmail.com" }
]
dependencies = ["fastapi[standard]>=0.116.1", "pydantic>=2.11.7", "uvicorn>=0.35.0", "sqlalchemy>=2.0.43", "sqlmodel>=0.0.24"]
